updated using Colaboratory

--- a/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
@@ -19,12 +19,7 @@
         "#**High Quality Text to Image Generation using Stable Diffusion,Real-ESR and Swin IR**\n",
         "[![github](https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white)](https://github.com/HemantKArya/HqStableDiffusionColab)\n",
         "\n",
-        "Generate 4K and FULL HD Images and Artworks for Free Using Stable Diffusion. Don't Forget to give Start at Github and Support Original Authors too 😊.\n",
-        "\n",
-        "Steps:-\n",
-        "1. Create Account at https://huggingface.co/ (don't worry it's easy 😅)\n",
-        "2. Visit https://huggingface.co/CompVis/stable-diffusion-v1-4 and down in the page tick the checkbox and then click submit.\n",
-        "3. Get Your Access Token from https://huggingface.co/settings/tokens and use it in 4th code cell.\n",
+        "Generate 4K and FULL HD Images and Artworks for Free Using Stable Diffusion. \n",
         "\n",
         "Visit Logical Spot for Video Help:-\n",
         "\n",
@@ -37,13 +32,13 @@
         "id": "gd-vX3cavOCt"
       },
       "source": [
-        "# **Stable Diffusion** 🎨 \n",
+        "# **Stable Diffusion** 🎨\n",
         "*...using `🧨diffusers`*\n",
         "\n",
         "Stable Diffusion is a text-to-image latent diffusion model created by the researchers and engineers from [CompVis](https://github.com/CompVis), [Stability AI](https://stability.ai/) and [LAION](https://laion.ai/). It's trained on 512x512 images from a subset of the [LAION-5B](https://laion.ai/blog/laion-5b/) database. This model uses a frozen CLIP ViT-L/14 text encoder to condition the model on text prompts. With its 860M UNet and 123M text encoder, the model is relatively lightweight and runs on a GPU with at least 10GB VRAM.\n",
         "See the [model card](https://huggingface.co/CompVis/stable-diffusion) for more information.\n",
         "\n",
-        "This Colab notebook shows how to use Stable Diffusion with the 🤗 Hugging Face [🧨 Diffusers library](https://github.com/huggingface/diffusers). \n",
+        "This Colab notebook shows how to use Stable Diffusion with the 🤗 Hugging Face [🧨 Diffusers library](https://github.com/huggingface/diffusers).\n",
         "https://github.com/CompVis/stable-diffusion\n",
         "\n",
         "orignal-link to colab https://colab.research.google.com/github/huggingface/notebooks/blob/main/diffusers/stable_diffusion.ipynb\n",
@@ -125,7 +120,7 @@
         "id": "paJt_cx5QgVz"
       },
       "source": [
-        "Next, you should install `diffusers==0.3.0` as well `scipy`, `ftfy` and `transformers`."
+        "## Next, you should install `diffusers==0.3.0` as well `scipy`, `ftfy` and `transformers`."
       ]
     },
     {
@@ -136,8 +131,8 @@
       },
       "outputs": [],
       "source": [
-        "!pip install diffusers==0.3.0\n",
-        "!pip install transformers scipy ftfy\n",
+        "!pip install diffusers==0.10.0\n",
+        "!pip install transformers scipy ftfy accelerate\n",
         "!pip install \"ipywidgets>=7,<8\"\n"
       ]
     },
@@ -147,7 +142,7 @@
         "id": "1Fcyyt0daU4e"
       },
       "source": [
-        "You also need to accept the model license before downloading or using the weights. In this post we'll use model version `v1-4`, so you'll need to  visit [its card](https://huggingface.co/CompVis/stable-diffusion-v1-4), read the license and tick the checkbox if you agree. \n",
+        "You also need to accept the model license before downloading or using the weights. In this post we'll use model version `v1-4`, so you'll need to  visit [its card](https://huggingface.co/CompVis/stable-diffusion-v1-4), read the license and tick the checkbox if you agree.\n",
         "\n",
         "You have to be a registered user in 🤗 Hugging Face Hub, and you'll also need to use an access token for the code to work. For more information on access tokens, please refer to [this section of the documentation](https://huggingface.co/docs/hub/security-tokens)."
       ]
@@ -162,45 +157,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OtrOo8YPoM2b"
-      },
-      "outputs": [],
-      "source": [
-        "from google.colab import output\n",
-        "output.enable_custom_widget_manager()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BHiV7acka4EY"
-      },
-      "source": [
-        "Now you can login with your user token."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "8TRAh8G6sNfA"
-      },
-      "outputs": [],
-      "source": [
-        "from huggingface_hub import notebook_login\n",
-        "notebook_login()"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3NnPOMAqAABv"
       },
       "source": [
-        "### Stable Diffusion Pipeline\n",
+        "# Stable Diffusion Pipeline\n",
         "\n",
         "`StableDiffusionPipeline` is an end-to-end inference pipeline that you can use to generate images from text with just a few lines of code.\n",
         "\n",
@@ -230,7 +192,7 @@
         "import torch\n",
         "import numpy as np\n",
         "import gc\n",
-        "from diffusers import StableDiffusionPipeline,StableDiffusionImg2ImgPipeline\n"
+        "from diffusers import StableDiffusionPipeline\n"
       ]
     },
     {
@@ -242,10 +204,19 @@
       "outputs": [],
       "source": [
         "# make sure you're logged in with `huggingface-cli login`\n",
-        "pipe = StableDiffusionPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\", revision=\"fp16\", torch_dtype=torch.float16, use_auth_token=True)  \n",
+        "pipe = StableDiffusionPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\", revision=\"fp16\", torch_dtype=torch.float16)  \n",
         "pipe = pipe.to(\"cuda\")\n",
         "# img2imgpipe = StableDiffusionImg2ImgPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\",revision=\"fp16\", torch_dtype=torch.float16,use_auth_token=True)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Setting  Up Real-ESR and SwinIR"
+      ],
+      "metadata": {
+        "id": "fD3ZVMLQEnHR"
+      }
     },
     {
       "cell_type": "code",
@@ -391,7 +362,7 @@
         "    w, h = imgs[0].size\n",
         "    grid = Image.new('RGB', size=(cols*w, rows*h))\n",
         "    grid_w, grid_h = grid.size\n",
-        "    \n",
+        "\n",
         "    for i, img in enumerate(imgs):\n",
         "        grid.paste(img, box=(i%cols*w, i//cols*h))\n",
         "    return grid"
@@ -410,23 +381,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "DIzYXn35bC_G"
       },
       "outputs": [],
       "source": [
-        "y_prompt = [\"fall , autumn, beautiful forest and colorful, breathtaking view, autumn season, proffesional photogaphy\"]"
+        "y_prompt = [\"A Ring made of Cherry Blossom flower\"]"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "-YAFLvWWrSdM"
       },
       "outputs": [],
@@ -470,7 +435,7 @@
         "id": "SJk5KfEdDBYu"
       },
       "source": [
-        "# Refine Same Images(Generated in Prev step) with 100 steps. You Can Directly jump to the next Cell"
+        "# Refine Same Images(Generated in Prev step) with 100 steps. You Can Directly jump to the next Cell ((Optional: if results are weired))"
       ]
     },
     {
@@ -510,13 +475,16 @@
         "id": "Ch8UY6Q_DO2z"
       },
       "source": [
-        "# Refine Same Images(Generated in Prev step) with 200 steps."
+        "# Refine Same Images(Generated in Prev step) with 200 steps. (Optional: if results are weired)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "w1SE6qi5BtxR"
       },
       "outputs": [],
@@ -551,7 +519,7 @@
         "id": "qfnEYcfAQwgn"
       },
       "source": [
-        "# **Run This Cell Only if Face is not Restored Completely.**"
+        "# **Run This Cell Only if Face is not Restored Completely.** (Optional: if faces are destorted) "
       ]
     },
     {
@@ -572,7 +540,7 @@
         "      os.remove(os.path.join(dir, f))\n",
         "    except:\n",
         "      pass\n",
-        "   \n",
+        "\n",
         "!python GFPGAN/inference_gfpgan.py -i /content/upload -o /content/results -s 2\n",
         "# os.chdir(\"/content\")\n",
         "\n",
@@ -598,7 +566,8 @@
         "id": "5zQLbDEV84wZ"
       },
       "source": [
-        "# **Real-ESRGAN Upscale**"
+        "# **Real-ESRGAN Upscale**\n",
+        "Make Sure to download all result from **final folder**."
       ]
     },
     {
@@ -687,7 +656,7 @@
         "toDown_list = sorted(glob.glob(os.path.join(images_2up, '*.png')))\n",
         "for path in toDown_list:\n",
         "  img = Image.open(path)\n",
-        "  img = img.resize((512,512))   #comment out this if not getting supreme quality                                  \n",
+        "  img = img.resize((512,512))   #comment out this if not getting supreme quality\n",
         "  img.save('./forswin/{}'.format(os.path.basename(path)))\n",
         "\n",
         "# os.chdir(\"/content/SwinIR\")\n",
@@ -696,7 +665,7 @@
         "\n",
         "\n",
         "!python SwinIR/main_test_swinir.py --task real_sr --model_path ./experiments/pretrained_models/003_realSR_BSRGAN_DFO_s64w8_SwinIR-M_x4_GAN.pth --folder_lq forswin --scale 4\n",
-        "  \n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -778,10 +747,14 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
-        "QYOlvQ1nQL7c",
+        "paJt_cx5QgVz",
+        "3NnPOMAqAABv",
+        "fD3ZVMLQEnHR",
         "SJk5KfEdDBYu",
         "Ch8UY6Q_DO2z",
-        "qfnEYcfAQwgn"
+        "qfnEYcfAQwgn",
+        "Reiik2GxFfRP",
+        "esIeu0OXIPJQ"
       ],
       "machine_shape": "hm",
       "provenance": [],
