updated using Colaboratory

--- a/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
@@ -435,7 +435,7 @@
         "id": "SJk5KfEdDBYu"
       },
       "source": [
-        "# Refine Same Images(Generated in Prev step) with 100 steps. You Can Directly jump to the next Cell ((Optional: if results are weired))"
+        "# Refine Same Images(Generated in Prev step) with 100 steps. You Can Directly jump to the next Cell (Optional: if results are weird)"
       ]
     },
     {
@@ -475,7 +475,7 @@
         "id": "Ch8UY6Q_DO2z"
       },
       "source": [
-        "# Refine Same Images(Generated in Prev step) with 200 steps. (Optional: if results are weired)"
+        "# Refine Same Images(Generated in Prev step) with 200 steps. (Optional: if results are weird)"
       ]
     },
     {
